@@ -4,13 +4,20 @@ import dk.digitalidentity.dao.StandardSectionDao;
 import dk.digitalidentity.dao.StandardTemplateDao;
 import dk.digitalidentity.dao.StandardTemplateSectionDao;
 import dk.digitalidentity.model.dto.RelatedDTO;
+import dk.digitalidentity.model.dto.enums.AllowedAction;
 import dk.digitalidentity.model.entity.Relatable;
 import dk.digitalidentity.model.entity.StandardSection;
 import dk.digitalidentity.model.entity.StandardTemplate;
 import dk.digitalidentity.model.entity.StandardTemplateSection;
 import dk.digitalidentity.model.entity.enums.RelationType;
 import dk.digitalidentity.model.entity.enums.StandardSectionStatus;
-import dk.digitalidentity.security.RequireUser;
+import dk.digitalidentity.security.Roles;
+import dk.digitalidentity.security.SecurityUtil;
+import dk.digitalidentity.security.annotations.crud.RequireCreateAll;
+import dk.digitalidentity.security.annotations.crud.RequireReadAll;
+import dk.digitalidentity.security.annotations.crud.RequireReadOwnerOnly;
+import dk.digitalidentity.security.annotations.crud.RequireUpdateAll;
+import dk.digitalidentity.security.annotations.sections.RequireStandard;
 import dk.digitalidentity.service.RelationService;
 import dk.digitalidentity.service.StandardSectionService;
 import dk.digitalidentity.service.StandardsService;
@@ -36,7 +43,6 @@ import java.text.DecimalFormat;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -51,7 +57,7 @@ import java.util.stream.Collectors;
 @Slf4j
 @Controller
 @RequestMapping("standards")
-@RequireUser
+@RequireStandard
 @RequiredArgsConstructor
 public class StandardController {
     private final StandardsService standardsService;
@@ -68,6 +74,7 @@ public class StandardController {
     record StandardTemplateSectionDTO(StandardTemplateSection standardTemplateSection,
                                       List<StandardSectionDTO> standardSectionDTOs) {}
 
+	@RequireReadOwnerOnly
     @Transactional
     @GetMapping("section/{sectionId}")
     public String lookup(@PathVariable final Long sectionId) {
@@ -93,6 +100,7 @@ public class StandardController {
         throw new ResponseStatusException(HttpStatus.NOT_FOUND);
     }
 
+	@RequireReadOwnerOnly
     @Transactional
     @GetMapping("plan")
     public String planPage(final Model model) {
@@ -107,6 +115,7 @@ public class StandardController {
         return "standards/iso27001";
     }
 
+	@RequireReadOwnerOnly
     @Transactional
     @GetMapping("act")
     public String actPage(final Model model) {
@@ -118,6 +127,7 @@ public class StandardController {
         return "standards/iso27001";
     }
 
+	@RequireReadOwnerOnly
     @Transactional
     @GetMapping("do")
     public String doPage(final Model model) {
@@ -129,6 +139,7 @@ public class StandardController {
         return "standards/iso27001";
     }
 
+	@RequireReadOwnerOnly
     @Transactional
     @GetMapping("check")
     public String checkPage(final Model model) {
@@ -140,7 +151,8 @@ public class StandardController {
         return "standards/iso27001";
     }
 
-    record StandardTemplateListDTO(String identifier, String name, String compliance) {}
+    record StandardTemplateListDTO(String identifier, String name, String compliance, Set<AllowedAction> allowedActions) {}
+	@RequireReadOwnerOnly
     @Transactional
     @GetMapping
     public String supportingPage(final Model model) {
@@ -155,17 +167,26 @@ public class StandardController {
             final double relevantCount = collect.size() - notRelevantCount;
             final DecimalFormat decimalFormat = new DecimalFormat("0.00");
 
+			Set<AllowedAction> allowedActions = new HashSet<>();
+			if (SecurityUtil.isOperationAllowed(Roles.UPDATE_ALL)) {
+				allowedActions.add(AllowedAction.UPDATE);
+			}
+			if (SecurityUtil.isOperationAllowed(Roles.DELETE_ALL)) {
+				allowedActions.add(AllowedAction.DELETE);
+			}
+
             if (relevantCount == 0 ) {
-                templates.add(new StandardTemplateListDTO(standardTemplate.getIdentifier(), standardTemplate.getName(), decimalFormat.format(100) + "%"));
+                templates.add(new StandardTemplateListDTO(standardTemplate.getIdentifier(), standardTemplate.getName(), decimalFormat.format(100) + "%", allowedActions));
             } else {
                 final double compliance = collect.isEmpty() ? 0 : 100 * (readyCounter / relevantCount);
-                templates.add(new StandardTemplateListDTO(standardTemplate.getIdentifier(), standardTemplate.getName(), decimalFormat.format(compliance) + "%"));
+                templates.add(new StandardTemplateListDTO(standardTemplate.getIdentifier(), standardTemplate.getName(), decimalFormat.format(compliance) + "%",  allowedActions));
             }
         }
         model.addAttribute("templates", templates);
         return "standards/supporting";
     }
 
+	@RequireReadOwnerOnly
     @Transactional
     @GetMapping("supporting/{id}")
     public String supportingPage(final Model model, @PathVariable final String id, @RequestParam(required = false) final StandardSectionStatus status) {
@@ -182,6 +203,7 @@ public class StandardController {
         return "standards/supporting_view";
     }
 
+	@RequireCreateAll
 	@Transactional
 	@PostMapping("/create")
 	public String newStandard(@Valid @ModelAttribute final StandardTemplate standard) {
@@ -191,6 +213,7 @@ public class StandardController {
 		return "redirect:/standards";
 	}
 
+	@RequireUpdateAll
 	@Transactional
 	@PostMapping("/update")
 	public String updateStandard(@Valid @ModelAttribute final StandardTemplate standard) {
@@ -201,6 +224,7 @@ public class StandardController {
 		return "redirect:/standards";
 	}
 
+	@RequireCreateAll
 	@GetMapping("/form")
 	public String createStandardForm(final Model model) {
 		model.addAttribute("action", "standards/create");
@@ -211,6 +235,7 @@ public class StandardController {
 		return "standards/form";
 	}
 
+	@RequireUpdateAll
 	@GetMapping("/form/{id}")
 	public String editStandardForm(final Model model, @PathVariable final String id) {
 		StandardTemplate template = supportingStandardService.lookup(id)
@@ -224,7 +249,7 @@ public class StandardController {
 		return "standards/form";
 	}
 
-
+	@RequireCreateAll
 	@GetMapping("/section/form/{id}")
 	public String sectionForm(final Model model, @PathVariable(name = "id") final String id) {
 		StandardTemplate template = supportingStandardService.lookup(id)
@@ -238,6 +263,7 @@ public class StandardController {
 		return "standards/sections/create_section_form";
 	}
 
+	@RequireCreateAll
 	@GetMapping("/section/header/form/{id}")
 	public String createHeaderForm(final Model model, @PathVariable(name = "id") final String id) {
 		StandardTemplate template = supportingStandardService.lookup(id)
@@ -251,6 +277,7 @@ public class StandardController {
 		return "standards/sections/create_header_form";
 	}
 
+	@RequireUpdateAll
 	@GetMapping("/section/header/form/{id}/{headerIdentifier}")
 	public String editHeaderForm(final Model model, @PathVariable(name = "id") final String headerIdentifier, @PathVariable(name = "headerIdentifier") final String id) {
 		StandardTemplate template = supportingStandardService.lookup(id)
@@ -268,6 +295,7 @@ public class StandardController {
 		return "standards/sections/create_header_form";
 	}
 
+	@RequireUpdateAll
 	@Transactional
 	@PostMapping("/headers/update/{identifier}")
 	public String editHeader(@Valid @ModelAttribute final StandardTemplateSection standardTemplateSection, @PathVariable(name = "identifier") final String id, RedirectAttributes redirectAttributes, BindingResult result) {
@@ -319,6 +347,7 @@ public class StandardController {
 		return "redirect:/standards/supporting/" + id;
 	}
 
+	@RequireCreateAll
 	@Transactional
 	@PostMapping("/sections/create/{identifier}")
 	public String createSection(@Valid @ModelAttribute final StandardSection standardSection, @PathVariable(name = "identifier") final String identifier) {
@@ -348,6 +377,7 @@ public class StandardController {
 		return "redirect:/standards/supporting/" + identifier;
 	}
 
+	@RequireCreateAll
 	@Transactional
 	@PostMapping("/headers/create/{identifier}")
 	public String createHeader(@Valid @ModelAttribute final StandardTemplateSection standardTemplateSection, @PathVariable(name = "identifier") final String id, RedirectAttributes redirectAttributes, BindingResult result) {
@@ -362,7 +392,7 @@ public class StandardController {
 			return "redirect:/standards/supporting/" + id;
 		}
 		String identifier = id.toLowerCase() + "_" + standardTemplateSection.getSection();
-		String sortKey = standardTemplateSection.getSection().replace(".", "").replaceAll("[^0-9]", "");;
+		String sortKey = standardTemplateSection.getSection().replace(".", "").replaceAll("[^0-9]", "");
 		standardTemplateSection.setSortKey(Integer.parseInt(sortKey));
 		standardTemplateSection.setIdentifier(identifier);
 		standardTemplateSection.setStandardTemplate(template);
@@ -393,14 +423,14 @@ public class StandardController {
                     filterRelations(relatedTo, RelationType.DOCUMENT),
                     filterRelations(relatedTo, RelationType.STANDARD_SECTION));
             })
-            .collect(Collectors.toList());
+				.toList();
         return new StandardTemplateSectionDTO(parent, standardSectionDTOs);
     }
 
     private static List<Relatable> filterRelations(final List<Relatable> relatables, final RelationType relationType) {
         return relatables.stream()
             .filter(r -> r.getRelationType().equals(relationType))
-            .collect(Collectors.toList());
+            .toList();
     }
 
 	private String getHighestVersionNumber(String parentSection, Set<StandardTemplateSection> allSections) {
